Fix navbar spacing on desktop
now there is a small hamburger button on mobile

--- a/stylesheet/css/style.css
+++ b/stylesheet/css/style.css
@@ -47,6 +47,7 @@
     font-style: normal;
     font-weight: 100;
     padding: 0;
+    margin-left: 4em;
     letter-spacing: 7px;
 }
 
@@ -155,6 +156,13 @@ nav ul a {
 
 .foot-social {
   height: 13em;
+}
+
+@media only screen and (max-width : 1240px) {
+  nav .brand-logo {
+    margin-left:0;
+
+  }
 }
 
 @media only screen and (max-width : 992px) {
